--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,9 +46,10 @@ Imports:
     SummarizedExperiment (>= 1.16),
     acidgenerics (>= 0.3.6),
     acidgsea (>= 0.3.0),
-    acidplots (>= 0.2.26),
+    acidplots (>= 0.2.27),
     cli (>= 2.0),
     cowplot (>= 1.0),
+    dplyr (>= 1.0),
     edgeR (>= 3.28),
     ggplot2 (>= 3.2),
     goalie (>= 0.4.4),
