--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(plotMarker)
 export(plotPCA)
 export(plotPCElbow)
 export(plotReducedDim)
+export(plotStackedBarPlot)
 export(plotTSNE)
 export(plotTopMarkers)
 export(plotUMAP)
@@ -83,6 +84,7 @@ exportMethods(plotMarker)
 exportMethods(plotPCA)
 exportMethods(plotPCElbow)
 exportMethods(plotReducedDim)
+exportMethods(plotStackedBarPlot)
 exportMethods(plotTSNE)
 exportMethods(plotTopMarkers)
 exportMethods(plotUMAP)
@@ -190,6 +192,7 @@ importFrom(acidgenerics,plotKnownMarkers)
 importFrom(acidgenerics,plotMarker)
 importFrom(acidgenerics,plotPCElbow)
 importFrom(acidgenerics,plotReducedDim)
+importFrom(acidgenerics,plotStackedBarPlot)
 importFrom(acidgenerics,plotTSNE)
 importFrom(acidgenerics,plotTopMarkers)
 importFrom(acidgenerics,plotUMAP)
@@ -241,6 +244,9 @@ importFrom(cli,cli_h2)
 importFrom(cli,cli_text)
 importFrom(cli,cli_ul)
 importFrom(cowplot,plot_grid)
+importFrom(dplyr,group_by)
+importFrom(dplyr,n)
+importFrom(dplyr,summarize)
 importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
 importFrom(edgeR,estimateDisp)
@@ -319,8 +325,10 @@ importFrom(methods,setValidity)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
+importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
 importFrom(rlang,sym)
+importFrom(rlang,syms)
 importFrom(scales,percent)
 importFrom(scales,pretty_breaks)
 importFrom(scater,calculateCPM)
