--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: pointillism
 Title: Single-cell RNA-seq toolkit
 Description: Toolkit for single-cell RNA-seq clustering analysis.
-Version: 0.4.11
-Date: 2020-06-26
+Version: 0.4.12
+Date: 2020-07-23
 Authors@R: c(
     person(
         given = "Michael",
@@ -30,46 +30,46 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: false
 Depends:
-    R (>= 3.6),
-    SingleCellExperiment (>= 1.8),
+    R (>= 4.0),
+    SingleCellExperiment (>= 1.10.1),
     basejump (>= 0.12.8)
 Imports:
-    BiocGenerics (>= 0.32),
-    BiocParallel (>= 1.20),
-    DESeq2 (>= 1.26),
-    DelayedArray (>= 0.12),
-    DelayedMatrixStats (>= 1.8),
-    IRanges (>= 2.20),
+    BiocGenerics,
+    BiocParallel,
+    DESeq2 (>= 1.28.1),
+    DelayedArray,
+    DelayedMatrixStats,
+    IRanges,
     Matrix (>= 1.2),
-    S4Vectors (>= 0.24),
-    Seurat (>= 3.1.5),
-    SummarizedExperiment (>= 1.16),
+    S4Vectors,
+    Seurat (>= 3.2),
+    SummarizedExperiment,
     acidgenerics (>= 0.3.7),
-    acidplots (>= 0.2.28),
+    acidplots (>= 0.2.30),
     cli (>= 2.0),
     cowplot (>= 1.0),
     dplyr (>= 1.0),
-    edgeR (>= 3.28),
-    ggplot2 (>= 3.2),
-    goalie (>= 0.4.4),
+    edgeR (>= 3.30.3),
+    ggplot2 (>= 3.3),
+    goalie (>= 0.4.5),
     rlang (>= 0.4),
-    scater (>= 1.14),
+    scater,
     sessioninfo (>= 1.1),
     methods,
     scales,
     stats,
     utils
 Suggests:
-    BiocStyle (>= 2.14),
+    BiocStyle,
     acidtest (>= 0.3.0),
-    future (>= 1.16),
-    knitr (>= 1.24),
+    future (>= 1.18),
+    knitr (>= 1.29),
     patrick (>= 0.0.1),
-    reticulate (>= 1.14),
-    roxygen2 (>= 6.1),
-    splatter (>= 1.10),
+    reticulate (>= 1.16),
+    roxygen2 (>= 7.1),
+    splatter,
     testthat (>= 2.2),
-    zinbwave (>= 1.8)
+    zinbwave
 Remotes:
     acidgenomics/acidgenerics,
     acidgenomics/acidgsea,
@@ -86,5 +86,5 @@ biocViews:
     Transcription,
     Visualization
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 VignetteBuilder: knitr
