--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,6 +103,32 @@ exportMethods(summary)
 exportMethods(topMarkers)
 importClassesFrom(Seurat,Seurat)
 importClassesFrom(SingleCellExperiment,SingleCellExperiment)
+importFrom(AcidGenerics,cellCountsPerCluster)
+importFrom(AcidGenerics,cellTypesPerCluster)
+importFrom(AcidGenerics,clusters)
+importFrom(AcidGenerics,cpm)
+importFrom(AcidGenerics,diffExp)
+importFrom(AcidGenerics,diffExpPerCluster)
+importFrom(AcidGenerics,findMarkers)
+importFrom(AcidGenerics,plotCellCountsPerCluster)
+importFrom(AcidGenerics,plotCellTypesPerCluster)
+importFrom(AcidGenerics,plotCounts)
+importFrom(AcidGenerics,plotDot)
+importFrom(AcidGenerics,plotDots)
+importFrom(AcidGenerics,plotFeature)
+importFrom(AcidGenerics,plotKnownMarkers)
+importFrom(AcidGenerics,plotMarker)
+importFrom(AcidGenerics,plotPCElbow)
+importFrom(AcidGenerics,plotReducedDim)
+importFrom(AcidGenerics,plotStackedBarPlot)
+importFrom(AcidGenerics,plotTSNE)
+importFrom(AcidGenerics,plotTopMarkers)
+importFrom(AcidGenerics,plotUMAP)
+importFrom(AcidGenerics,plotViolin)
+importFrom(AcidGenerics,topMarkers)
+importFrom(AcidPlots,acid_theme_dark)
+importFrom(AcidPlots,acid_theme_light)
+importFrom(AcidPlots,matchLabels)
 importFrom(BiocGenerics,"counts<-")
 importFrom(BiocGenerics,"sizeFactors<-")
 importFrom(BiocGenerics,counts)
@@ -173,32 +199,6 @@ importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(SummarizedExperiment,rowRanges)
-importFrom(acidgenerics,cellCountsPerCluster)
-importFrom(acidgenerics,cellTypesPerCluster)
-importFrom(acidgenerics,clusters)
-importFrom(acidgenerics,cpm)
-importFrom(acidgenerics,diffExp)
-importFrom(acidgenerics,diffExpPerCluster)
-importFrom(acidgenerics,findMarkers)
-importFrom(acidgenerics,plotCellCountsPerCluster)
-importFrom(acidgenerics,plotCellTypesPerCluster)
-importFrom(acidgenerics,plotCounts)
-importFrom(acidgenerics,plotDot)
-importFrom(acidgenerics,plotDots)
-importFrom(acidgenerics,plotFeature)
-importFrom(acidgenerics,plotKnownMarkers)
-importFrom(acidgenerics,plotMarker)
-importFrom(acidgenerics,plotPCElbow)
-importFrom(acidgenerics,plotReducedDim)
-importFrom(acidgenerics,plotStackedBarPlot)
-importFrom(acidgenerics,plotTSNE)
-importFrom(acidgenerics,plotTopMarkers)
-importFrom(acidgenerics,plotUMAP)
-importFrom(acidgenerics,plotViolin)
-importFrom(acidgenerics,topMarkers)
-importFrom(acidplots,acid_theme_dark)
-importFrom(acidplots,acid_theme_light)
-importFrom(acidplots,matchLabels)
 importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"organism<-")
 importFrom(basejump,"sampleData<-")
