--- a/NAMESPACE
+++ b/NAMESPACE
@@ -334,6 +334,6 @@ importFrom(stats,model.matrix)
 importFrom(stats,relevel)
 importFrom(utils,capture.output)
 importFrom(utils,data)
-importFrom(utils,globalVariables)
+importFrom(utils,packageName)
 importFrom(utils,packageVersion)
 importMethodsFrom(basejump,coerce)
