--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -80,3 +80,4 @@ biocViews:
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
+Additional_repositories: https://r.acidgenomics.com
