Work toward simplifying NAMESPACE

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,34 +33,25 @@ Depends:
     R (>= 4.0),
     basejump (>= 0.14.15)
 Imports:
-    AcidGenerics (>= 0.4.0),
-    AcidPlots (>= 0.3.0),
-    BiocGenerics,
-    BiocParallel,
-    DESeq2 (>= 1.28),
+    AcidGenerics (>= 0.5.16),
+    AcidPlots (>= 0.3.3),
+    DESeq2 (>= 1.30),
     DelayedArray,
     DelayedMatrixStats,
-    IRanges,
     Matrix (>= 1.2),
-    S4Vectors,
-    Seurat (>= 3.2),
-    SummarizedExperiment,
-    cli (>= 2.0),
-    cowplot (>= 1.0),
+    Seurat (>= 4.0),
     dplyr (>= 1.0),
     edgeR (>= 3.30),
     ggplot2 (>= 3.3),
-    goalie (>= 0.4.9),
+    goalie (>= 0.5.0),
     methods,
-    rlang (>= 0.4),
     scales,
-    scater,
-    sessioninfo (>= 1.1),
+    scater (>= 1.18),
     stats,
     utils
 Suggests:
     AcidTest (>= 0.4.0),
-    BiocStyle,
+    BiocParallel,
     future,
     reticulate,
     roxygen2,
