--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,7 +100,6 @@ exportMethods(show)
 exportMethods(summary)
 exportMethods(topMarkers)
 importClassesFrom(Seurat,Seurat)
-importClassesFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(AcidGenerics,cellCountsPerCluster)
 importFrom(AcidGenerics,cellTypesPerCluster)
 importFrom(AcidGenerics,clusters)
@@ -123,9 +122,14 @@ importFrom(AcidGenerics,plotTopMarkers)
 importFrom(AcidGenerics,plotUMAP)
 importFrom(AcidGenerics,plotViolin)
 importFrom(AcidGenerics,topMarkers)
+importFrom(AcidPlots,"!!!")
+importFrom(AcidPlots,"!!")
 importFrom(AcidPlots,acid_theme_dark)
 importFrom(AcidPlots,acid_theme_light)
 importFrom(AcidPlots,matchLabels)
+importFrom(AcidPlots,plot_grid)
+importFrom(AcidPlots,sym)
+importFrom(AcidPlots,syms)
 importFrom(BiocGenerics,"counts<-")
 importFrom(BiocGenerics,"sizeFactors<-")
 importFrom(BiocGenerics,counts)
@@ -147,8 +151,6 @@ importFrom(DESeq2,results)
 importFrom(DelayedArray,DelayedArray)
 importFrom(DelayedMatrixStats,colSums2)
 importFrom(DelayedMatrixStats,rowSums2)
-importFrom(IRanges,SplitDataFrameList)
-importFrom(IRanges,unsplit)
 importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
@@ -200,7 +202,10 @@ importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"organism<-")
 importFrom(basejump,"sampleData<-")
 importFrom(basejump,Gene2Symbol)
+importFrom(basejump,SingleCellExperiment)
+importFrom(basejump,SplitDataFrameList)
 importFrom(basejump,camelCase)
+importFrom(basejump,capture.output)
 importFrom(basejump,coerce)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,decode)
@@ -220,13 +225,17 @@ importFrom(basejump,melt)
 importFrom(basejump,metrics)
 importFrom(basejump,mutateIf)
 importFrom(basejump,organism)
+importFrom(basejump,packageName)
+importFrom(basejump,packageVersion)
 importFrom(basejump,printString)
 importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
 importFrom(basejump,separator)
+importFrom(basejump,session_info)
 importFrom(basejump,showSlotInfo)
 importFrom(basejump,snakeCase)
 importFrom(basejump,uniteInterestingGroups)
+importFrom(basejump,unsplit)
 importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_success)
@@ -238,7 +247,6 @@ importFrom(cli,cli_h1)
 importFrom(cli,cli_h2)
 importFrom(cli,cli_text)
 importFrom(cli,cli_ul)
-importFrom(cowplot,plot_grid)
 importFrom(dplyr,group_by)
 importFrom(dplyr,n)
 importFrom(dplyr,summarize)
@@ -320,20 +328,12 @@ importFrom(methods,setValidity)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
-importFrom(rlang,"!!!")
-importFrom(rlang,"!!")
-importFrom(rlang,sym)
-importFrom(rlang,syms)
 importFrom(scales,percent)
 importFrom(scales,pretty_breaks)
 importFrom(scater,calculateCPM)
 importFrom(scater,normalizeCounts)
-importFrom(sessioninfo,session_info)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(stats,relevel)
-importFrom(utils,capture.output)
 importFrom(utils,data)
-importFrom(utils,packageName)
-importFrom(utils,packageVersion)
 importMethodsFrom(basejump,coerce)
