--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,15 +130,8 @@ importFrom(AcidPlots,matchLabels)
 importFrom(AcidPlots,plot_grid)
 importFrom(AcidPlots,sym)
 importFrom(AcidPlots,syms)
-importFrom(BiocGenerics,"counts<-")
-importFrom(BiocGenerics,"sizeFactors<-")
-importFrom(BiocGenerics,counts)
 importFrom(BiocGenerics,normalize)
 importFrom(BiocGenerics,plotPCA)
-importFrom(BiocGenerics,rowMeans)
-importFrom(BiocGenerics,rowSums)
-importFrom(BiocGenerics,sizeFactors)
-importFrom(BiocGenerics,table)
 importFrom(BiocParallel,"bpprogressbar<-")
 importFrom(BiocParallel,MulticoreParam)
 importFrom(BiocParallel,SerialParam)
@@ -187,27 +180,28 @@ importFrom(SingleCellExperiment,reducedDim)
 importFrom(SingleCellExperiment,reducedDimNames)
 importFrom(SingleCellExperiment,reducedDims)
 importFrom(SingleCellExperiment,sizeFactors)
-importFrom(SummarizedExperiment,"assay<-")
-importFrom(SummarizedExperiment,"assays<-")
-importFrom(SummarizedExperiment,"colData<-")
-importFrom(SummarizedExperiment,"rowData<-")
-importFrom(SummarizedExperiment,"rowRanges<-")
-importFrom(SummarizedExperiment,assay)
-importFrom(SummarizedExperiment,assayNames)
-importFrom(SummarizedExperiment,assays)
-importFrom(SummarizedExperiment,colData)
-importFrom(SummarizedExperiment,rowData)
-importFrom(SummarizedExperiment,rowRanges)
+importFrom(basejump,"assay<-")
+importFrom(basejump,"assays<-")
+importFrom(basejump,"colData<-")
+importFrom(basejump,"counts<-")
 importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"organism<-")
+importFrom(basejump,"rowData<-")
+importFrom(basejump,"rowRanges<-")
 importFrom(basejump,"sampleData<-")
+importFrom(basejump,"sizeFactors<-")
 importFrom(basejump,Gene2Symbol)
 importFrom(basejump,SingleCellExperiment)
 importFrom(basejump,SplitDataFrameList)
+importFrom(basejump,assay)
+importFrom(basejump,assayNames)
+importFrom(basejump,assays)
 importFrom(basejump,camelCase)
 importFrom(basejump,capture.output)
 importFrom(basejump,coerce)
+importFrom(basejump,colData)
 importFrom(basejump,convertGenesToSymbols)
+importFrom(basejump,counts)
 importFrom(basejump,decode)
 importFrom(basejump,estimateSizeFactors)
 importFrom(basejump,geometricMean)
@@ -228,12 +222,18 @@ importFrom(basejump,organism)
 importFrom(basejump,packageName)
 importFrom(basejump,packageVersion)
 importFrom(basejump,printString)
+importFrom(basejump,rowData)
+importFrom(basejump,rowMeans)
+importFrom(basejump,rowRanges)
+importFrom(basejump,rowSums)
 importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
 importFrom(basejump,separator)
 importFrom(basejump,session_info)
 importFrom(basejump,showSlotInfo)
+importFrom(basejump,sizeFactors)
 importFrom(basejump,snakeCase)
+importFrom(basejump,table)
 importFrom(basejump,uniteInterestingGroups)
 importFrom(basejump,unsplit)
 importFrom(cli,cli_alert)
