--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ importFrom(AcidGenerics,cpm)
 importFrom(AcidGenerics,diffExp)
 importFrom(AcidGenerics,diffExpPerCluster)
 importFrom(AcidGenerics,findMarkers)
+importFrom(AcidGenerics,normalize)
 importFrom(AcidGenerics,plotCellCountsPerCluster)
 importFrom(AcidGenerics,plotCellTypesPerCluster)
 importFrom(AcidGenerics,plotCounts)
@@ -114,6 +115,7 @@ importFrom(AcidGenerics,plotDots)
 importFrom(AcidGenerics,plotFeature)
 importFrom(AcidGenerics,plotKnownMarkers)
 importFrom(AcidGenerics,plotMarker)
+importFrom(AcidGenerics,plotPCA)
 importFrom(AcidGenerics,plotPCElbow)
 importFrom(AcidGenerics,plotReducedDim)
 importFrom(AcidGenerics,plotStackedBarPlot)
@@ -130,8 +132,6 @@ importFrom(AcidPlots,matchLabels)
 importFrom(AcidPlots,plot_grid)
 importFrom(AcidPlots,sym)
 importFrom(AcidPlots,syms)
-importFrom(BiocGenerics,normalize)
-importFrom(BiocGenerics,plotPCA)
 importFrom(BiocParallel,"bpprogressbar<-")
 importFrom(BiocParallel,MulticoreParam)
 importFrom(BiocParallel,SerialParam)
