--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,7 @@ importFrom(AcidPlots,acid_theme_dark)
 importFrom(AcidPlots,acid_theme_light)
 importFrom(AcidPlots,matchLabels)
 importFrom(AcidPlots,plot_grid)
+importFrom(AcidPlots,pretty_breaks)
 importFrom(AcidPlots,sym)
 importFrom(AcidPlots,syms)
 importFrom(BiocParallel,"bpprogressbar<-")
@@ -143,7 +144,6 @@ importFrom(DESeq2,estimateSizeFactorsForMatrix)
 importFrom(DESeq2,results)
 importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,"metadata<-")
-importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,as.data.frame)
 importFrom(S4Vectors,as.matrix)
 importFrom(S4Vectors,cbind)
@@ -169,24 +169,20 @@ importFrom(Seurat,as.Seurat)
 importFrom(Seurat,as.SingleCellExperiment)
 importFrom(SingleCellExperiment,"logcounts<-")
 importFrom(SingleCellExperiment,"normcounts<-")
-importFrom(SingleCellExperiment,"reducedDim<-")
-importFrom(SingleCellExperiment,"sizeFactors<-")
 importFrom(SingleCellExperiment,logcounts)
 importFrom(SingleCellExperiment,normcounts)
-importFrom(SingleCellExperiment,reducedDim)
-importFrom(SingleCellExperiment,reducedDimNames)
-importFrom(SingleCellExperiment,reducedDims)
-importFrom(SingleCellExperiment,sizeFactors)
 importFrom(basejump,"assay<-")
 importFrom(basejump,"assays<-")
 importFrom(basejump,"colData<-")
 importFrom(basejump,"counts<-")
 importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"organism<-")
+importFrom(basejump,"reducedDim<-")
 importFrom(basejump,"rowData<-")
 importFrom(basejump,"rowRanges<-")
 importFrom(basejump,"sampleData<-")
 importFrom(basejump,"sizeFactors<-")
+importFrom(basejump,DataFrame)
 importFrom(basejump,Gene2Symbol)
 importFrom(basejump,SingleCellExperiment)
 importFrom(basejump,SplitDataFrameList)
@@ -214,11 +210,16 @@ importFrom(basejump,markdownHeader)
 importFrom(basejump,matchInterestingGroups)
 importFrom(basejump,melt)
 importFrom(basejump,metrics)
+importFrom(basejump,model.matrix)
 importFrom(basejump,mutateIf)
 importFrom(basejump,organism)
 importFrom(basejump,packageName)
 importFrom(basejump,packageVersion)
 importFrom(basejump,printString)
+importFrom(basejump,reducedDim)
+importFrom(basejump,reducedDimNames)
+importFrom(basejump,reducedDims)
+importFrom(basejump,relevel)
 importFrom(basejump,rowData)
 importFrom(basejump,rowMeans)
 importFrom(basejump,rowRanges)
@@ -230,6 +231,7 @@ importFrom(basejump,session_info)
 importFrom(basejump,showSlotInfo)
 importFrom(basejump,sizeFactors)
 importFrom(basejump,snakeCase)
+importFrom(basejump,t)
 importFrom(basejump,table)
 importFrom(basejump,uniteInterestingGroups)
 importFrom(basejump,unsplit)
@@ -326,11 +328,8 @@ importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
 importFrom(scales,percent)
-importFrom(scales,pretty_breaks)
 importFrom(scater,calculateCPM)
 importFrom(scater,normalizeCounts)
 importFrom(stats,median)
-importFrom(stats,model.matrix)
-importFrom(stats,relevel)
 importFrom(utils,data)
 importMethodsFrom(basejump,coerce)
