--- a/NAMESPACE
+++ b/NAMESPACE
@@ -142,22 +142,8 @@ importFrom(DESeq2,DESeq)
 importFrom(DESeq2,DESeqDataSet)
 importFrom(DESeq2,estimateSizeFactorsForMatrix)
 importFrom(DESeq2,results)
-importFrom(S4Vectors,"mcols<-")
-importFrom(S4Vectors,"metadata<-")
-importFrom(S4Vectors,as.data.frame)
-importFrom(S4Vectors,as.matrix)
-importFrom(S4Vectors,cbind)
-importFrom(S4Vectors,complete.cases)
-importFrom(S4Vectors,do.call)
-importFrom(S4Vectors,head)
-importFrom(S4Vectors,lapply)
-importFrom(S4Vectors,mcols)
-importFrom(S4Vectors,metadata)
-importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,sapply)
-importFrom(S4Vectors,split)
 importFrom(S4Vectors,summary)
-importFrom(S4Vectors,tail)
 importFrom(Seurat,CreateSeuratObject)
 importFrom(Seurat,DefaultAssay)
 importFrom(Seurat,GetAssayData)
@@ -176,6 +162,8 @@ importFrom(basejump,"assays<-")
 importFrom(basejump,"colData<-")
 importFrom(basejump,"counts<-")
 importFrom(basejump,"interestingGroups<-")
+importFrom(basejump,"mcols<-")
+importFrom(basejump,"metadata<-")
 importFrom(basejump,"organism<-")
 importFrom(basejump,"reducedDim<-")
 importFrom(basejump,"rowData<-")
@@ -186,20 +174,27 @@ importFrom(basejump,DataFrame)
 importFrom(basejump,Gene2Symbol)
 importFrom(basejump,SingleCellExperiment)
 importFrom(basejump,SplitDataFrameList)
+importFrom(basejump,as.data.frame)
+importFrom(basejump,as.matrix)
 importFrom(basejump,assay)
 importFrom(basejump,assayNames)
 importFrom(basejump,assays)
 importFrom(basejump,camelCase)
 importFrom(basejump,capture.output)
+importFrom(basejump,cbind)
 importFrom(basejump,coerce)
 importFrom(basejump,colData)
+importFrom(basejump,complete.cases)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,counts)
 importFrom(basejump,decode)
+importFrom(basejump,do.call)
 importFrom(basejump,estimateSizeFactors)
 importFrom(basejump,geometricMean)
+importFrom(basejump,head)
 importFrom(basejump,import)
 importFrom(basejump,interestingGroups)
+importFrom(basejump,lapply)
 importFrom(basejump,leftJoin)
 importFrom(basejump,makeGene2SymbolFromEnsembl)
 importFrom(basejump,makeNames)
@@ -208,10 +203,13 @@ importFrom(basejump,mapGenesToRownames)
 importFrom(basejump,mapGenesToSymbols)
 importFrom(basejump,markdownHeader)
 importFrom(basejump,matchInterestingGroups)
+importFrom(basejump,mcols)
 importFrom(basejump,melt)
+importFrom(basejump,metadata)
 importFrom(basejump,metrics)
 importFrom(basejump,model.matrix)
 importFrom(basejump,mutateIf)
+importFrom(basejump,na.omit)
 importFrom(basejump,organism)
 importFrom(basejump,packageName)
 importFrom(basejump,packageVersion)
@@ -231,8 +229,10 @@ importFrom(basejump,session_info)
 importFrom(basejump,showSlotInfo)
 importFrom(basejump,sizeFactors)
 importFrom(basejump,snakeCase)
+importFrom(basejump,split)
 importFrom(basejump,t)
 importFrom(basejump,table)
+importFrom(basejump,tail)
 importFrom(basejump,uniteInterestingGroups)
 importFrom(basejump,unsplit)
 importFrom(cli,cli_alert)
