--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,6 +100,7 @@ exportMethods(show)
 exportMethods(summary)
 exportMethods(topMarkers)
 importClassesFrom(Seurat,Seurat)
+importClassesFrom(basejump,SingleCellExperiment)
 importFrom(AcidGenerics,cellCountsPerCluster)
 importFrom(AcidGenerics,cellTypesPerCluster)
 importFrom(AcidGenerics,clusters)
@@ -233,6 +234,7 @@ importFrom(basejump,split)
 importFrom(basejump,t)
 importFrom(basejump,table)
 importFrom(basejump,tail)
+importFrom(basejump,ul)
 importFrom(basejump,uniteInterestingGroups)
 importFrom(basejump,unsplit)
 importFrom(cli,cli_alert)
@@ -245,7 +247,6 @@ importFrom(cli,cli_end)
 importFrom(cli,cli_h1)
 importFrom(cli,cli_h2)
 importFrom(cli,cli_text)
-importFrom(cli,cli_ul)
 importFrom(dplyr,group_by)
 importFrom(dplyr,n)
 importFrom(dplyr,summarize)
