--- a/NAMESPACE
+++ b/NAMESPACE
@@ -175,6 +175,10 @@ importFrom(basejump,DataFrame)
 importFrom(basejump,Gene2Symbol)
 importFrom(basejump,SingleCellExperiment)
 importFrom(basejump,SplitDataFrameList)
+importFrom(basejump,alert)
+importFrom(basejump,alertInfo)
+importFrom(basejump,alertSuccess)
+importFrom(basejump,alertWarning)
 importFrom(basejump,as.data.frame)
 importFrom(basejump,as.matrix)
 importFrom(basejump,assay)
@@ -192,6 +196,8 @@ importFrom(basejump,decode)
 importFrom(basejump,do.call)
 importFrom(basejump,estimateSizeFactors)
 importFrom(basejump,geometricMean)
+importFrom(basejump,h1)
+importFrom(basejump,h2)
 importFrom(basejump,head)
 importFrom(basejump,import)
 importFrom(basejump,interestingGroups)
@@ -237,16 +243,7 @@ importFrom(basejump,tail)
 importFrom(basejump,ul)
 importFrom(basejump,uniteInterestingGroups)
 importFrom(basejump,unsplit)
-importFrom(cli,cli_alert)
-importFrom(cli,cli_alert_info)
-importFrom(cli,cli_alert_success)
-importFrom(cli,cli_alert_warning)
-importFrom(cli,cli_div)
-importFrom(cli,cli_dl)
-importFrom(cli,cli_end)
-importFrom(cli,cli_h1)
-importFrom(cli,cli_h2)
-importFrom(cli,cli_text)
+importFrom(basejump,verbatim)
 importFrom(dplyr,group_by)
 importFrom(dplyr,n)
 importFrom(dplyr,summarize)
