--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,7 @@ importFrom(AcidPlots,"!!")
 importFrom(AcidPlots,acid_theme_dark)
 importFrom(AcidPlots,acid_theme_light)
 importFrom(AcidPlots,matchLabels)
+importFrom(AcidPlots,percent)
 importFrom(AcidPlots,plot_grid)
 importFrom(AcidPlots,pretty_breaks)
 importFrom(AcidPlots,sym)
@@ -143,7 +144,6 @@ importFrom(DESeq2,DESeq)
 importFrom(DESeq2,DESeqDataSet)
 importFrom(DESeq2,estimateSizeFactorsForMatrix)
 importFrom(DESeq2,results)
-importFrom(S4Vectors,sapply)
 importFrom(S4Vectors,summary)
 importFrom(Seurat,CreateSeuratObject)
 importFrom(Seurat,DefaultAssay)
@@ -154,17 +154,15 @@ importFrom(Seurat,Stdev)
 importFrom(Seurat,VariableFeatures)
 importFrom(Seurat,as.Seurat)
 importFrom(Seurat,as.SingleCellExperiment)
-importFrom(SingleCellExperiment,"logcounts<-")
-importFrom(SingleCellExperiment,"normcounts<-")
-importFrom(SingleCellExperiment,logcounts)
-importFrom(SingleCellExperiment,normcounts)
 importFrom(basejump,"assay<-")
 importFrom(basejump,"assays<-")
 importFrom(basejump,"colData<-")
 importFrom(basejump,"counts<-")
 importFrom(basejump,"interestingGroups<-")
+importFrom(basejump,"logcounts<-")
 importFrom(basejump,"mcols<-")
 importFrom(basejump,"metadata<-")
+importFrom(basejump,"normcounts<-")
 importFrom(basejump,"organism<-")
 importFrom(basejump,"reducedDim<-")
 importFrom(basejump,"rowData<-")
@@ -192,6 +190,7 @@ importFrom(basejump,colData)
 importFrom(basejump,complete.cases)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,counts)
+importFrom(basejump,data)
 importFrom(basejump,decode)
 importFrom(basejump,do.call)
 importFrom(basejump,estimateSizeFactors)
@@ -203,6 +202,7 @@ importFrom(basejump,import)
 importFrom(basejump,interestingGroups)
 importFrom(basejump,lapply)
 importFrom(basejump,leftJoin)
+importFrom(basejump,logcounts)
 importFrom(basejump,makeGene2SymbolFromEnsembl)
 importFrom(basejump,makeNames)
 importFrom(basejump,mapGenesToIDs)
@@ -211,12 +211,14 @@ importFrom(basejump,mapGenesToSymbols)
 importFrom(basejump,markdownHeader)
 importFrom(basejump,matchInterestingGroups)
 importFrom(basejump,mcols)
+importFrom(basejump,median)
 importFrom(basejump,melt)
 importFrom(basejump,metadata)
 importFrom(basejump,metrics)
 importFrom(basejump,model.matrix)
 importFrom(basejump,mutateIf)
 importFrom(basejump,na.omit)
+importFrom(basejump,normcounts)
 importFrom(basejump,organism)
 importFrom(basejump,packageName)
 importFrom(basejump,packageVersion)
@@ -231,6 +233,7 @@ importFrom(basejump,rowRanges)
 importFrom(basejump,rowSums)
 importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
+importFrom(basejump,sapply)
 importFrom(basejump,separator)
 importFrom(basejump,session_info)
 importFrom(basejump,showSlotInfo)
@@ -325,9 +328,6 @@ importFrom(methods,setValidity)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
-importFrom(scales,percent)
 importFrom(scater,calculateCPM)
 importFrom(scater,normalizeCounts)
-importFrom(stats,median)
-importFrom(utils,data)
 importMethodsFrom(basejump,coerce)
