--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,6 +124,7 @@ importFrom(AcidGenerics,plotTSNE)
 importFrom(AcidGenerics,plotTopMarkers)
 importFrom(AcidGenerics,plotUMAP)
 importFrom(AcidGenerics,plotViolin)
+importFrom(AcidGenerics,summary)
 importFrom(AcidGenerics,topMarkers)
 importFrom(AcidPlots,"!!")
 importFrom(AcidPlots,acid_theme_dark)
@@ -141,7 +142,6 @@ importFrom(DESeq2,DESeq)
 importFrom(DESeq2,DESeqDataSet)
 importFrom(DESeq2,estimateSizeFactorsForMatrix)
 importFrom(DESeq2,results)
-importFrom(S4Vectors,summary)
 importFrom(Seurat,CreateSeuratObject)
 importFrom(Seurat,DefaultAssay)
 importFrom(Seurat,GetAssayData)
