--- a/NAMESPACE
+++ b/NAMESPACE
@@ -162,6 +162,7 @@ importFrom(basejump,"metadata<-")
 importFrom(basejump,"normcounts<-")
 importFrom(basejump,"organism<-")
 importFrom(basejump,"reducedDim<-")
+importFrom(basejump,"reducedDimNames<-")
 importFrom(basejump,"rowData<-")
 importFrom(basejump,"rowRanges<-")
 importFrom(basejump,"sampleData<-")
@@ -189,6 +190,7 @@ importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,counts)
 importFrom(basejump,data)
 importFrom(basejump,decode)
+importFrom(basejump,dl)
 importFrom(basejump,do.call)
 importFrom(basejump,estimateSizeFactors)
 importFrom(basejump,geometricMean)
@@ -201,6 +203,7 @@ importFrom(basejump,lapply)
 importFrom(basejump,leftJoin)
 importFrom(basejump,logcounts)
 importFrom(basejump,makeGene2SymbolFromEnsembl)
+importFrom(basejump,makeLabel)
 importFrom(basejump,makeNames)
 importFrom(basejump,mapGenesToIDs)
 importFrom(basejump,mapGenesToRownames)
