Import new functions from AcidPlots and basejump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,10 +131,10 @@ importFrom(AcidPlots,acid_theme_dark)
 importFrom(AcidPlots,acid_theme_light)
 importFrom(AcidPlots,matchLabels)
 importFrom(AcidPlots,percent)
-importFrom(AcidPlots,plot_grid)
 importFrom(AcidPlots,pretty_breaks)
 importFrom(AcidPlots,sym)
 importFrom(AcidPlots,syms)
+importFrom(AcidPlots,wrap_plots)
 importFrom(BiocParallel,"bpprogressbar<-")
 importFrom(BiocParallel,bpparam)
 importFrom(BiocParallel,bpprogressbar)
@@ -171,6 +171,7 @@ importFrom(basejump,DataFrame)
 importFrom(basejump,Gene2Symbol)
 importFrom(basejump,SingleCellExperiment)
 importFrom(basejump,SplitDataFrameList)
+importFrom(basejump,abort)
 importFrom(basejump,alert)
 importFrom(basejump,alertInfo)
 importFrom(basejump,alertSuccess)
@@ -243,6 +244,7 @@ importFrom(basejump,split)
 importFrom(basejump,t)
 importFrom(basejump,table)
 importFrom(basejump,tail)
+importFrom(basejump,toInlineString)
 importFrom(basejump,ul)
 importFrom(basejump,uniteInterestingGroups)
 importFrom(basejump,unsplit)
