--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,6 +45,7 @@ Imports:
     scater (>= 1.20.1)
 Suggests:
     AcidTest (>= 0.4.0),
+    dplyr (>= 1.0.7),
     future (>= 1.22.1),
     reticulate (>= 1.20),
     splatter (>= 1.16.0),
