--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pointillism
 Title: Single-cell RNA-seq toolkit
 Description: Toolkit for single-cell RNA-seq clustering analysis.
-Version: 0.5.1
+Version: 0.6.0
 Date: 2021-09-14
 Authors@R: c(
     person(
@@ -35,14 +35,12 @@ Depends:
 Imports:
     AcidGenerics (>= 0.5.20),
     AcidPlots (>= 0.4.0),
+    AcidSingleCell (>= 0.2.0),
     BiocParallel (>= 1.26.0),
-    DESeq2 (>= 1.32.0),
     Seurat (>= 4.0.4),
-    edgeR (>= 3.34.0),
     ggplot2 (>= 3.3),
     goalie (>= 0.5.4),
-    methods,
-    scater (>= 1.20.1)
+    methods
 Suggests:
     AcidTest (>= 0.4.0),
     dplyr (>= 1.0.7),
