--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,19 @@ importFrom(AcidPlots,acid_theme_dark)
 importFrom(AcidPlots,acid_theme_light)
 importFrom(AcidPlots,matchLabels)
 importFrom(AcidPlots,percent)
+importFrom(AcidPlots,plotCellCountsPerCluster)
+importFrom(AcidPlots,plotCellTypesPerCluster)
+importFrom(AcidPlots,plotCounts)
+importFrom(AcidPlots,plotDots)
+importFrom(AcidPlots,plotFeature)
+importFrom(AcidPlots,plotKnownMarkers)
+importFrom(AcidPlots,plotMarker)
+importFrom(AcidPlots,plotPCA)
+importFrom(AcidPlots,plotReducedDim)
+importFrom(AcidPlots,plotStackedBarPlot)
+importFrom(AcidPlots,plotTSNE)
+importFrom(AcidPlots,plotUMAP)
+importFrom(AcidPlots,plotViolin)
 importFrom(AcidPlots,pretty_breaks)
 importFrom(AcidPlots,sym)
 importFrom(AcidPlots,syms)
