Work on simplifying package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ export(SeuratMarkersPerCluster)
 export(plotPCElbow)
 export(plotTopMarkers)
 export(runSeurat)
-export(runZinbwave)
 export(summary)
 export(topMarkers)
 exportClasses(SeuratMarkers)
@@ -64,17 +63,16 @@ exportMethods(reducedDims)
 exportMethods(rowData)
 exportMethods(rowRanges)
 exportMethods(runSeurat)
-exportMethods(runZinbwave)
 exportMethods(sampleData)
 exportMethods(sampleNames)
 exportMethods(summary)
 exportMethods(topMarkers)
 importClassesFrom(AcidSingleCell,KnownMarkers)
 importClassesFrom(Seurat,Seurat)
-importClassesFrom(basejump,SingleCellExperiment)
+importClassesFrom(SingleCellExperiment,SingleCellExperiment)
+importFrom(AcidGenerics,KnownMarkers)
 importFrom(AcidGenerics,plotPCElbow)
 importFrom(AcidGenerics,plotTopMarkers)
-importFrom(AcidGenerics,summary)
 importFrom(AcidGenerics,topMarkers)
 importFrom(AcidPlots,"!!")
 importFrom(AcidPlots,acid_theme_dark)
@@ -98,7 +96,6 @@ importFrom(AcidPlots,pretty_breaks)
 importFrom(AcidPlots,sym)
 importFrom(AcidPlots,syms)
 importFrom(AcidPlots,wrap_plots)
-importFrom(AcidSingleCell,KnownMarkers)
 importFrom(AcidSingleCell,cellCountsPerCluster)
 importFrom(AcidSingleCell,cellTypesPerCluster)
 importFrom(AcidSingleCell,clusters)
@@ -110,6 +107,7 @@ importFrom(AcidSingleCell,normalize)
 importFrom(BiocParallel,"bpprogressbar<-")
 importFrom(BiocParallel,bpparam)
 importFrom(BiocParallel,bpprogressbar)
+importFrom(S4Vectors,summary)
 importFrom(Seurat,CreateSeuratObject)
 importFrom(Seurat,DefaultAssay)
 importFrom(Seurat,GetAssayData)
