--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,9 @@ Imports:
     AcidPlots (>= 0.4.0),
     AcidSingleCell (>= 0.2.0),
     BiocParallel,
-    Seurat,
+    S4Vectors,
+    Seurat (>= 4.1.0),
+    SingleCellExperiment,
     ggplot2,
     goalie (>= 0.6.0),
     methods
@@ -46,7 +48,6 @@ Suggests:
     dplyr,
     future,
     reticulate,
-    splatter,
     testthat
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
