--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,20 +30,20 @@ License: AGPL-3
 Encoding: UTF-8
 LazyData: false
 Depends:
-    R (>= 4.1)
+    R (>= 4.2)
 Imports:
-    AcidGenerics (>= 0.6.0),
-    AcidPlots (>= 0.4.0),
-    AcidSingleCell (>= 0.2.0),
+    AcidGenerics,
+    AcidPlots,
+    AcidSingleCell,
     BiocParallel,
     S4Vectors,
-    Seurat (>= 4.1.0),
+    Seurat,
     SingleCellExperiment,
     ggplot2,
-    goalie (>= 0.6.0),
+    goalie,
     methods
 Suggests:
-    AcidTest (>= 0.5.0),
+    AcidTest,
     dplyr,
     future,
     reticulate,
