--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: pointillism
 Title: Single-cell RNA-seq toolkit
 Description: Toolkit for single-cell RNA-seq clustering analysis.
 Version: 0.6.0.9000
-Date: 2022-03-07
+Date: 2022-03-10
 Authors@R: c(
     person(
         given = "Michael",
@@ -32,6 +32,7 @@ LazyData: false
 Depends:
     R (>= 4.2)
 Imports:
+    AcidCLI,
     AcidGenerics,
     AcidPlots,
     AcidSingleCell,
@@ -41,12 +42,14 @@ Imports:
     SingleCellExperiment,
     ggplot2,
     goalie,
-    methods
+    methods,
+    utils
 Suggests:
     AcidTest,
+    basejump,
     dplyr,
     future,
-    reticulate,
+    rmarkdown,
     testthat
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
